--- a/posts/templates/posts/post_selection.html
+++ b/posts/templates/posts/post_selection.html
@@ -221,7 +221,7 @@
 
   <div class="stack-container">
     
-    <button class="news-button" onclick="window.location.href='story_1'">
+    <button class="news-button" onclick="window.location.href='polling_panic'">
       <div class="button-label">✅ Polling Panic</div>
       <div class="label-underline"></div>
       <div class="print-content">
@@ -231,7 +231,7 @@
       </div>
     </button>
 
-    <button class="news-button" onclick="window.location.href='story_2'">
+    <button class="news-button" onclick="window.location.href='unchecked_aggression'">
       <div class="button-label">🗡 Unchecked Aggression</div>
       <div class="label-underline"></div>
       <div class="print-content">
@@ -240,7 +240,7 @@
       </div>
     </button>
 
-    <button class="news-button" onclick="window.location.href='story_3'">
+    <button class="news-button" onclick="window.location.href='unnatural_disaster'">
       <div class="button-label">⚡ Unnatural Disaster</div>
       <div class="label-underline"></div>
       <div class="print-content">
@@ -249,7 +249,7 @@
       </div>
     </button>
 
-    <button class="news-button" onclick="window.location.href='story_4'">
+    <button class="news-button" onclick="window.location.href='bad_influence'">
       <div class="button-label">🍟 Bad Influence</div>
       <div class="label-underline"></div>
       <div class="print-content">
@@ -258,7 +258,7 @@
       </div>
     </button>
 
-    <button class="news-button" onclick="window.location.href='story_5'">
+    <button class="news-button" onclick="window.location.href='gutsy_gamble'">
       <div class="button-label">🃏 Gutsy Gamble</div>
       <div class="label-underline"></div>
       <div class="print-content">
@@ -268,7 +268,7 @@
       </div>
     </button>
 
-    <button class="news-button" onclick="window.location.href='story_6'">
+    <button class="news-button" onclick="window.location.href='fundraising_fiasco'">
       <div class="button-label">👴 Fundraising Fiasco</div>
       <div class="label-underline"></div>
       <div class="print-content">
@@ -278,7 +278,7 @@
       </div>
     </button>
 
-    <button class="news-button" onclick="window.location.href='story_8'">
+    <button class="news-button" onclick="window.location.href='technology_termoil'">
       <div class="button-label">🏫 Technology Termoil</div>
       <div class="label-underline"></div>
       <div class="print-content">
