--- a/posts/templates/posts/post_page_6.html
+++ b/posts/templates/posts/post_page_6.html
@@ -304,7 +304,7 @@
         </p>
 
         <div class="button-row">
-            <a href="story_6" class="story-button">← Back to Fill in the Blanks</a>
+            <a href="fundraising_fiasco" class="story-button">← Back to Fill in the Blanks</a>
             <a href="/resources" class="story-button">View Related Resources →</a>
         </div>
     </div>
