--- a/posts/templates/posts/post_page_2.html
+++ b/posts/templates/posts/post_page_2.html
@@ -263,7 +263,7 @@
         </p>
 
         <div class="button-row">
-            <a href="story_2" class="story-button">← Back to Fill in the Blanks</a>
+            <a href="unchecked_aggression" class="story-button">← Back to Fill in the Blanks</a>
             <a href="/resources" class="story-button">View Related Resources →</a>
         </div>
     </div>
