--- a/posts/templates/posts/post_page_3.html
+++ b/posts/templates/posts/post_page_3.html
@@ -288,7 +288,7 @@
         </p>
 
         <div class="button-row">
-            <a href="story_3" class="story-button">← Back to Fill in the Blanks</a>
+            <a href="unnatural_disaster" class="story-button">← Back to Fill in the Blanks</a>
             <a href="/resources" class="story-button">View Related Resources →</a>
         </div>
     </div>
