--- a/posts/templates/posts/post_page_5.html
+++ b/posts/templates/posts/post_page_5.html
@@ -266,7 +266,7 @@
         </p>
 
         <div class="button-row">
-            <a href="story_5" class="story-button">← Back to Fill in the Blanks</a>
+            <a href="gutsy_gamble" class="story-button">← Back to Fill in the Blanks</a>
             <a href="/resources" class="story-button">View Related Resources →</a>
         </div>
     </div>
