--- a/posts/templates/posts/post_page_8.html
+++ b/posts/templates/posts/post_page_8.html
@@ -311,7 +311,7 @@
         </p>
 
         <div class="button-row">
-            <a href="story_8" class="story-button">← Back to Fill in the Blanks</a>
+            <a href="technology_termoil" class="story-button">← Back to Fill in the Blanks</a>
             <a href="/resources" class="story-button">View Related Resources →</a>
         </div>
     </div>
