--- a/templates/home.html
+++ b/templates/home.html
@@ -482,7 +482,7 @@
                 <div class="article-text">
                     <div class="cta-wrapper">
                         <video src="https://cdn.lux.gg/public/clickhere.mp4" muted autoplay loop class="spiral-video"></video>
-                        <a href="/posts/" class="cta-button"></a>
+                        <a href="/stories/" class="cta-button"></a>
                     </div>
                 </div>
             </article>
