--- a/posts/templates/posts/post_page_5.html
+++ b/posts/templates/posts/post_page_5.html
@@ -283,7 +283,7 @@
                 <source src="https://cdn.lux.gg/public/gamble.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-            <figcaption>Garden Gamble Ring Uncovered</figcaption>
+            <figcaption>Garden Gambling Ring Uncovered</figcaption>
         </figure>
 
         <p>
