--- a/templates/home.html
+++ b/templates/home.html
@@ -472,7 +472,7 @@
         <header class="header">
             <h1 class="masthead">Spin The Story</h1>
             <div class="date-info">A "Fake News" Adventure</div>
-            <div class="price">Created By Kelsey Swasnon Website Design By Laith Miller</div>
+            <div class="price">Created By Kelsey Swanson Website Design By Laith Miller</div>
         </header>
 
         <div class="main-content">
