--- a/posts/templates/posts/generated_stories.html
+++ b/posts/templates/posts/generated_stories.html
@@ -238,7 +238,7 @@
             {{form.Adjective_3}} nation, and this {{form.Adjective_4}} election will be just the start!
         </p>
 
-        <p><a href="story_1">← Back to fill in the blanks</a></p>
+        <p><a href="polling_panic">← Back to fill in the blanks</a></p>
     </div>
 
     <div class="email-share-container">
