--- a/templates/home.html
+++ b/templates/home.html
@@ -478,7 +478,7 @@
         <div class="main-content">
             <article class="lead-story">
                 <h2 class="headline">Explore How Easily The Tone And Meaning of a Story Can be Changed</h2>
-                <p class="subheadline">Click the Button Bellow To Start Spinning Your Own Story</p>
+                <p class="subheadline">Click the Button Below To Start Spinning Your Own Story</p>
                 <div class="article-text">
                     <div class="cta-wrapper">
                         <video src="https://cdn.lux.gg/public/clickhere.mp4" muted autoplay loop class="spiral-video"></video>
@@ -490,12 +490,12 @@
             <aside class="sidebar">
                 <div class="sidebar-story">
                     <a href="/about"><h3 class="sidebar-headline">About</h3></a>
-                    <p class="sidebar-text">Learn more about the artists who created spin the story and about the exhibit it is part of, "Blurred Realities". </p>
+                    <p class="sidebar-text">Learn more about the artists who created spin the story and about the exhibit it is part of "Blurred Realities". </p>
                 </div>
 
                 <div class="sidebar-story">
                     <a href="/resources"><h3 class="sidebar-headline">Resources</h3></a>
-                    <p class="sidebar-text">Find resources on how you can better spot and protect yourself from missinformation and fake news.</p>
+                    <p class="sidebar-text">Find resources on how you can better spot and protect yourself from misinformation and fake news.</p>
                 </div>
 
                 <div class="sidebar-story">
