--- a/posts/templates/posts/story_1.html
+++ b/posts/templates/posts/story_1.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>{% block title %}Polling Panic{% endblock %}</title>
   <meta charset="UTF-8">
   <title>Fill in the Blanks</title>
   <style>
