--- a/posts/templates/posts/post_page_5.html
+++ b/posts/templates/posts/post_page_5.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ form.name.value }}'s Report</title>
+    <title>{% block title %}Gutsy Gamble{% endblock %}</title>
     <style>
         body {
             font-family: 'Georgia', serif;
