--- a/posts/templates/posts/post_selection.html
+++ b/posts/templates/posts/post_selection.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>News Stack</title>
+  <title>{% block title %}Story Select | Spin The Story{% endblock %}</title>
   <style>
     body {
       font-family: Georgia, serif;
