--- a/posts/templates/posts/story_1.html
+++ b/posts/templates/posts/story_1.html
@@ -2,9 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>{% block title %}Polling Panic{% endblock %}</title>
   <meta charset="UTF-8">
-  <title>Fill in the Blanks</title>
+  <title>{% block title %}Polling Panic | Blanks{% endblock %}</title>
   <style>
     body {
       font-family: Georgia, serif;
