--- a/posts/templates/posts/story_4.html
+++ b/posts/templates/posts/story_4.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Fill in the Blanks</title>
+  <title>{% block title %}Bad Influence | Blanks{% endblock %}</title>
   <style>
     body {
       font-family: Georgia, serif;
