--- a/templates/home.html
+++ b/templates/home.html
@@ -387,13 +387,18 @@
                 width: 100%;
                 flex-direction: column;
             }
+
             .nav-links {
-                display: flex;
+                display: none; /* HIDDEN by default */
                 gap: 16px;
                 flex-direction: column;
                 width: 100%;
                 background-color: #444;
                 padding: 10px 0;
+            }
+
+            .nav-links.active {
+                display: flex; /* SHOWS on toggle */
             }
 
             .nav-links a {
@@ -402,10 +407,6 @@
                 font-weight: bold;
                 text-align: right;
                 padding-right: 24px;
-            }
-
-            .nav-links.active {
-                display: flex;
             }
 
             .toggle-btn {
