--- a/templates/about.html
+++ b/templates/about.html
@@ -316,25 +316,12 @@
         }
 
         @media (max-width: 768px) {
-            .nav-container {
-                width: 100%;
-                flex-direction: column;
-            }
             .nav-links {
-                display: flex;
-                gap: 16px;
+                display: none;
                 flex-direction: column;
                 width: 100%;
                 background-color: #444;
-                padding: 10px 0;
-            }
-
-            .nav-links a {
-                color: white;
-                text-decoration: none;
-                font-weight: bold;
-                text-align: right;
-                padding-right: 24px;
+                padding: 20px;
             }
 
             .nav-links.active {
