--- a/templates/home.html
+++ b/templates/home.html
@@ -383,30 +383,16 @@
 
 
         @media (max-width: 768px) {
-            .nav-container {
-                width: 100%;
-                flex-direction: column;
-            }
-
             .nav-links {
-                display: none; /* HIDDEN by default */
-                gap: 16px;
+                display: none;
                 flex-direction: column;
                 width: 100%;
                 background-color: #444;
-                padding: 10px 0;
+                padding: 20px;
             }
 
             .nav-links.active {
-                display: flex; /* SHOWS on toggle */
-            }
-
-            .nav-links a {
-                color: white;
-                text-decoration: none;
-                font-weight: bold;
-                text-align: right;
-                padding-right: 24px;
+                display: flex;
             }
 
             .toggle-btn {
