updating about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -460,84 +460,77 @@
                 <h3 class="column-headline">The Power of Bias in Shaping Reality</h3>
                 
                 <p>
-                Cognitive and social biases shape not only what we believe, but how we interpret
-                reality. We are naturally inclined to seek out and trust information that aligns with our
-                existing values and worldviews, a tendency known as confirmation bias. This
-                phenomenon can lead us to ignore, dismiss, or distrust new information that challenges
-                our beliefs, reinforcing our existing perspectives and influencing our capacity for
-                meaningful dialogue with others.
+                We are naturally inclined to seek out and trust information that aligns with our existing values and worldviews. 
+                This tendency, known as confirmation bias, can lead us to distrust new data or perspectives that challenge our beliefs. 
+                We assume that something or someone is accurate simply because it aligns with our current understanding of the world. 
                 </p>
                 <p>
-                Technologies like social media and AI often amplify these biases. Algorithms
-                personalize content based on past behavior, surrounding us with ideas and opinions we
-                are more likely to agree with. Marketers, politicians, and influencers further leverage
-                these tendencies, crafting emotionally charged messages designed to resonate with
-                existing beliefs and keep us engaged. This ultimately creates filter bubbles in our online
-                engagement, where we rarely encounter opposing viewpoints, and our sense of truth
-                becomes increasingly shaped by systems designed to maximize attention, not
-                accuracy.
+                Technologies like social media often amplify our existing cognitive and social biases. 
+                Algorithms personalize content based on our past behavior, surrounding us with ideas and opinions that we likely already agree with. 
+                Marketers, politicians, and influencers further leverage these platforms, crafting emotionally-charged messages designed to resonate with our existing beliefs and keep us engaged with their content. 
+                This ultimately creates filter bubbles, spaces where we rarely encounter opposing viewpoints, in our online engagement. 
+                Our sense of truth becomes increasingly shaped by systems designed to maximize attention, not accuracy.
                 </p>
                 <p>
-                AI is also not exempt from bias. Because these models are trained with human-
-                generated data, they often reproduce the stereotypes and inequalities already present
-                in society. When left unchecked, these tools can reinforce systemic inequities, distort
-                public discourse, and influence our perceptions of the world under the guise of
-                objectivity.
+                AI is also not exempt from bias. Because these models are trained with human-generated data, they often reproduce the stereotypes, inequalities, and misinformation already present in society.
+                 When left unchecked, these tools can distort public discourse and influence our perceptions of the world under a mask of objectivity.
                 </p>
                 <p>
-                As AI becomes more central to how we access information, it’s essential to question:
-                who and what shapes the results—and who stands to benefit?
+                As AI tools become more central to how we access information, 
+                it’s essential to question: who and what is shaping the results—and can what we see truly be trusted?
+                </p>
+                    <br><br>
+                <h3 class="column-headline">Authenticity Unbound</h3>
+                <p>
+                Technologies frequently expand our ability to connect with people, places, and experiences far beyond our physical reach. 
+                We can video call our friends when we are lonely, look closely at small details by zooming into a 3D rendering of an artwork or object, or take an immersive virtual reality (VR) tour of a city we always wanted to visit. 
+                This increasing access to digital surrogates—copies of originals that mimic or reflect the real thing—and experiences raises new questions of what we define as genuine.
+                </p>
+                <p>
+                At the same time these technologies can increase our access to knowledge, cultures, and relationships, they also blur boundaries between the real and the replicated. 
+                Can asking ChatGPT for advice replace the same emotional connection we find from turning to a trusted friend? Do we experience similar wonder from a beautiful photograph or a VR experience of a forest as we do when we spend time in nature?  
+                What is lost or gained when our experiences are facilitated through prompts and screens?
+                </p>
+                <p>
+                As technologies grow and enable us to create digital surrogates that are more realistic and personalized, 
+                the question becomes not just whether we can replicate in-person experiences with digital formats but whether and when we should—and what we might be gaining or giving up in the process.
                 </p>
                     <br><br>
                 <h3 class="column-headline">Truth and Manipulation in a Digital Age</h3>
                 <p>
-                Social media transformed how we access information, offering new ways to learn,
-                connect, and explore the world. Yet, these platforms can just as easily be used to distort
-                the truth. With the growing sophistication of AI, it can be even more difficult to
-                distinguish a true story from what has been embellished or entirely fabricated.
-                Deepfakes, AI-generated images, and manipulated narratives can spread rapidly, often
-                without clear markers to indicate they are false.
+                Social media transformed how we access information, offering new ways to learn, connect, and explore the world.
+                 Yet, these platforms can just as easily be used to distort the truth. 
+                 Misinformation, when false information is spread by mistake, and disinformation, where false information is intentionally 
+                 produced and shared to deceive audiences, are ongoing challenges within and beyond these platforms.
                 </p>
                 <p>
-                Although some social media platforms introduced fact-checking labels or community
-                notes to slow the spread of misinformation, these efforts are fairly limited. Outside of our
-                own responsibility to fact check the information we encounter on social media, there are
-                few regulations preventing people from intentionally posting and spreading false
-                content.
+                With the growing sophistication of AI, it can be even more difficult to distinguish a true story from what has been exaggerated or entirely fabricated. 
+                Deepfakes, AI-generated images, and manipulated stories can spread rapidly—often without clear markers to indicate they are false. 
+                Although some social media platforms introduced fact-checking labels or community notes to slow down the spread of mis/disinformation, these efforts are limited. 
+                Outside of our own choices to fact check the information we encounter on social media, there are few measures in place to prevent the intentional or unintentional spread of false information.
                 </p>
                 <p>
-                Sometimes, this lack of focus on the truth is intentionally leveraged by individuals or
-                organizations to spark outrage and create confusion. These posts are then amplified by
-                recommendation algorithms and marketing that prioritizes engagement (likes, shares,
-                clicks), over accuracy. The more a post resonates emotionally or goes viral, the more
-                it’s promoted. This selective exposure reinforces what we already believe, making it
-                even harder to see diverse perspectives or evaluate information critically.
+                Disinformation is often intentionally leveraged by individuals or organizations to spark outrage and create confusion. 
+                These posts are then amplified by recommendation algorithms and marketing that prioritize engagement (likes, shares, clicks), over accuracy. 
+                The more a post sparks reactions or goes viral, the more it’s promoted. This selective exposure reinforces what we already believe, 
+                making it even harder to see different perspectives or evaluate information critically.
                 </p>
                     <br><br>
                 <h3 class="column-headline">Reimagined Narratives</h3>
                 <p>
-                We constantly engage with fabrications—reading stories, playing video games, or
-                watching movies all require us to set aside what is real and temporarily accept a new
-                reality. These fictions can help us build empathy for perspectives and stories that are
-                not our own, ponder the future, and imagine the "what-if's" of the past. Even though we
-                know these experiences to be fictional, they can impact our lives in real ways and are
-                still grounded in the visions of the artists who created the works.
+                We constantly engage with fabrication. Reading stories, playing video games, or watching movies all require us to set aside what is real and temporarily accept an imagined world. 
+                Engaging with these kinds of fictions can help us reflect on new experiences and viewpoints, reimagine history, and explore future possibilities. 
+                Even though we know these experiences to be fictional, they can impact our lives in real, lasting ways and are grounded in the visions of their human authors.
                 </p>
                 <p>
-                What happens when we begin to use AI to create these fictions? From reimagining
-                ancestral legacies to reminiscing about childhood memories, people are increasingly
-                using AI for the development of stories, memories, and reimagined worlds. As you'll see
-                throughout the exhibition, AI can be biased and flawed, so even intentionally using it to
-                generate fictional outputs creates a unique product - one that's been first conceptualized
-                by a person and then filtered through the lens of the AI model.
+                What happens when we begin using artificial intelligence (AI) to help create these fictions? From reimagining ancestral legacies to reminiscing about childhood memories, 
+                people are increasingly using AI to develop stories, resurface old memories, and design new worlds. However, as you will see throughout the exhibition, AI can be biased and flawed. 
+                Even intentionally using it to generate fictional outputs creates a unique product—one that is first imagined by a person and then filtered through the lens of the AI model. 
                 </p>
                 <p>
-                With the right prompts, these technologies can be used to question, reinterpret, and
-                reconfigure the stories we tell about ourselves, challenging dominant narratives,
-                amplifying voices, and speculating on alternate histories or futures. They may also
-                create content that feels unsettling, like a memory that is barely out of reach. Pieces like
-                this offer us the opportunity to contemplate the complex nature of creativity, truth,
-                technology, and what it means to engage in realities outside of our own.
+                With the right prompts, these technologies can be used to question, reinterpret, and reconfigure the stories we tell about ourselves, challenging dominant narratives, amplifying voices, 
+                and exploring speculative histories or futures. They may also create content that feels unsettling, like a memory that feels distorted and barely out of reach. 
+                Pieces like this offer us the opportunity to contemplate the complex nature of creativity, truth, technology, and what it means to engage in realities outside of our own.
                 </p>
             </div>
         </div>
