--- a/posts/templates/posts/generated_stories.html
+++ b/posts/templates/posts/generated_stories.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Technology Termoil{% endblock %}</title>
+    <title>{% block title %}Generated Stories{% endblock %}</title>
     <style>
         body {
             font-family: 'Georgia', serif;
