--- a/posts/templates/posts/generated_stories.html
+++ b/posts/templates/posts/generated_stories.html
@@ -36,6 +36,9 @@
             border-radius: 2px;
         }
 
+        .article-container h1 {
+            clear: both;
+        }
 
         .article-container {
             max-width: 1000px;
